# kdevops

./: .b4-config  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  COPYING  Kconfig  LICENSE  MAINTAINERS  Makefile  Makefile.btrfs_progs  Makefile.build_qemu  Makefile.docker-mirror  Makefile.extra_vars  Makefile.hypervisor-tunings  Makefile.kdevops  Makefile.linux-mirror  Makefile.min_deps  Makefile.plugins  Makefile.postfix  Makefile.subtrees  PROMPTS.md  README.md  confdata.c  expr.h  flake.nix  requirements.txt  requirements.yml  update-upstream-kconfig.sh
callback_plugins/: lucid.py
defconfigs/: ai-milvus-docker  ai-milvus-docker-ci  ai-milvus-multifs  ai-milvus-multifs-distro  ai-milvus-multifs-extended  aws-gpu-g5-12xlarge  aws-gpu-g5-xlarge  aws-gpu-g6e-ai  aws-gpu-p4d-24xlarge  aws-gpu-p5-48xlarge  aws-gpu-p5-4xlarge  aws-t3-micro  blktests  blktests_block  blktests_loop  blktests_meta  blktests_nbd  blktests_nvme  blktests_nvmemp  blktests_scsi  blktests_srp  blktests_test  blktests_zbd  btrfs  btrfs_compression  btrfs_fspace  btrfs_holes  (+175 more)
workflows/rcloud/: Cargo.toml  DESIGN.md  Kconfig  Makefile
workflows/rcloud/docs/: AUTHENTICATION.md  TESTING.md
workflows/rcloud/scripts/: check-health.py
workflows/rcloud/src/: lib.rs  main.rs  metrics.rs
workflows/rcloud/src/api/: mod.rs  models.rs  routes.rs
workflows/rcloud/src/api/handlers/: health.rs  images.rs  metrics.rs  mod.rs  vms.rs
workflows/rcloud/src/config/: kdevops.rs  mod.rs
workflows/rcloud/src/vm/: disk.rs  manager.rs  mod.rs  xml.rs
workflows/rcloud/tests/: api_tests.rs
(+2042 files in other folders)
