[package]
name = "rcloud"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["kdevops contributors"]
description = "Private cloud infrastructure for kdevops - Ubicloud alternative in Rust"
license = "copyleft-next-0.3.1"
repository = "https://github.com/linux-kdevops/kdevops"

[[bin]]
name = "rcloud"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# libvirt bindings
virt = "0.3"

# Templating (for XML generation from guestfs templates)
tera = "1"

# Configuration management
config = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"

# Metrics
prometheus-client = "0.22"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI (for future CLI tool)
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[features]
default = []
cli = ["clap"]

[build-dependencies]
# For build-time checks
